# ai-agent-sdk

./: .gitignore  .mcp.json  INSTALL.md  LICENSE  README.md  build.js  jest.config.cjs  jest.setup.cjs  package-lock.json  package.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
__tests__/: build.test.js  client.test.js  normalizer-cache.test.js  normalizer.test.js  plugin.test.js  session-cache.test.js  session.test.js  tracking.test.js  transport.test.js  vi-session.test.js  vi.test.js  wrapper.test.js
__tests__/hooks/: shared.test.js
commands/: tes-setup.md  tes-status.md
docs/plans/: 2026-03-13-python-sdk-design.md  2026-03-13-python-sdk-implementation.md  2026-03-14-sdk-v2-wrapper-plan.md
e2e/: worker.js  wrangler.toml
e2e/memory/: docker-compose.test.yml  memory.e2e.test.js  test-distill.sh
e2e/openclaw/: chat-turn.e2e.test.js  docker-compose.test.yml  openclaw-config.json  openclaw.e2e.test.js
e2e/openclaw/plugin-override/: index.js  openclaw.plugin.json  package.json
hooks/: hooks.json
hooks/scripts/: post-tool-use.js  session-end.js  session-start.js  shared.js  stop.js  user-prompt.js
python/pentatonic_agent_events/: __init__.py  client.py  session.py  transport.py  wrapper.py
python/pentatonic_ai_agent_sdk/: __init__.py  normalizer.py  session.py  tracking.py  transport.py  wrapper.py
python/tests/: test_client.py  test_normalizer.py  test_session.py  test_tracking.py  test_transport.py  test_wrapper.py
scripts/manual-test/: README.md  manual-test.sh
scripts/manual-test/docker/: Dockerfile.claude-code  Dockerfile.openclaw
servers/: tes-memory.js
specs/: 01-onboarding-repo-ingest.md  02-tes-corpus-companion.md  03-memory-engine-v1.md
src/: client.js  index.js  normalizer.js  session.js  telemetry.js  tracking.js  transport.js  vi-session.js  vi.js  wrapper.js
