[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pentatonic-agent-events"
version = "0.3.0b3"
description = "TES SDK — LLM observability and lifecycle tracking via Pentatonic Thing Event System. Track token usage, tool calls, and conversations. Manage things through event-sourced lifecycle stages with AI enrichment and vector search."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = [
    "tes",
    "thing-event-system",
    "pentatonic",
    "llm",
    "observability",
    "ai",
    "openai",
    "anthropic",
    "product-lifecycle",
    "event-sourcing",
    "circular-commerce",
    "agentic-commerce",
    "vector-search",
    "graphql",
    "mcp",
    "model-context-protocol",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://thingeventsystem.ai"
Documentation = "https://thingeventsystem.ai/docs"
Repository = "https://github.com/Pentatonic-Ltd/ai-agent-sdk"
Issues = "https://github.com/Pentatonic-Ltd/ai-agent-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["python/pentatonic_agent_events"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
pythonpath = ["python"]
