[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pentatonic-ai-agent-sdk"
version = "0.3.0"
description = "AI Agent SDK — observability, memory, and analytics for LLM applications. Provider-agnostic. Tracks token usage, tool calls, conversations, and enables shared team memory."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = [
    "tes",
    "thing-event-system",
    "pentatonic",
    "llm",
    "observability",
    "ai",
    "openai",
    "anthropic",
    "product-lifecycle",
    "event-sourcing",
    "circular-commerce",
    "agentic-commerce",
    "vector-search",
    "graphql",
    "mcp",
    "model-context-protocol",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://api.pentatonic.com"
Documentation = "https://github.com/Pentatonic-Ltd/ai-agent-sdk#readme"
Repository = "https://github.com/Pentatonic-Ltd/ai-agent-sdk"
Issues = "https://github.com/Pentatonic-Ltd/ai-agent-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["python/pentatonic_ai_agent_sdk"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
pythonpath = ["python"]

[tool.hatch.build.targets.sdist]
include = ["python/pentatonic_ai_agent_sdk"]
